# fastkaggle

./: LICENSE.md  README.md  pyproject.toml
fastkaggle/: kaggle.py
tests/: test_kaggle.py
